--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,9 @@ layout: default
 
   <h1>{{ page.title }}</h1>
 
-<h1>If you see this, the layout updated!</h1>
+<div class="contents"></div>
+
+<h1>If you see this, the layout updated2</h1>
   
   <div class="entry">
     {{ content }}
