--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  margin-left: 165px;
 }
 
 h1, h2, h3, h4, h5, h6 {
