--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,13 @@
       </div>
     </div>
 
+<div class="sidenav">
+  <a href="#about">About</a>
+  <a href="#services">Services</a>
+  <a href="#clients">Clients</a>
+  <a href="#contact">Contact</a>
+</div>
+    
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
