--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,8 @@
     </div>
 
 <div class="sidenav">
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
+  <a href="{{ site.baseurl }}/about">About</a>
+  <a href="{{ site.baseurl }}/test">Testing</a>
 </div>
     
     <div id="main" role="main" class="container">
