--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@ body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
   margin-left: 175px;
+  margin-right: 175px;
 }
 
 h1, h2, h3, h4, h5, h6 {
