--- a/style.scss
+++ b/style.scss
@@ -210,6 +210,14 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
+  display:inline;    
+}
+
+nav:after {
+    content:"\a";
+    white-space: pre;
+}
+
 
   @include mobile {
     float: none;
