--- a/style.scss
+++ b/style.scss
@@ -199,10 +199,10 @@ img {
   margin: -5px 0 0 0;
   color: $gray;
   font-size: 16px;
-
+  }
+	
   @include mobile {
     margin: 3px 0;
-  }
 }
 
 nav {
@@ -210,7 +210,8 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
-  display:inline;    
+  display:inline;
+  background-color: #D3D3D3;
 }
 
 nav:after {
