--- a/style.scss
+++ b/style.scss
@@ -212,6 +212,8 @@ nav {
   font-size: 18px;
   display:inline;
   background-color: #D3D3D3;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 nav:after {
@@ -228,7 +230,7 @@ nav:after {
   }
 
   a {
-    margin-left: 20px;
+    margin-left: 0px;
     color: $darkGray;
     text-align: right;
     font-weight: 300;
