--- a/style.scss
+++ b/style.scss
@@ -207,13 +207,13 @@ img {
 
 nav {
   float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
+  margin-top: 10px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
   display:inline;
-  background-color: #D3D3D3;
   padding-left: 20px;
   padding-right: 20px;
+  margin-left: 15px;
 }
 
 nav:after {
