--- a/style.scss
+++ b/style.scss
@@ -215,7 +215,8 @@ nav {
   padding-right: 20px;
   margin-left: 15px;
   margin-bottom: 15px;
-  background-color: #D3D3D3;
+  background-color: #f8f9fa;
+  border-color: #a2a9b1;
 }
 
 nav:after {
