--- a/style.scss
+++ b/style.scss
@@ -215,7 +215,7 @@ nav {
   padding-right: 20px;
   margin-left: 15px;
   margin-bottom: 15px;
-  background-color: #f8f9fa;
+  background-color: #D3D3D3;
   border-color: #a2a9b1;
   border-width: thin;
 }
