--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,8 @@ layout: default
 <article class="page">
   
   <h1>{{ page.title }}</h1>
+
+<h1>If you see this, the layout updated!</h1>
   
 <div class="contents"></div>
   
