--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,8 @@ layout: default
 <article class="page">
   
   <h1>{{ page.title }}</h1>
+
+<h1>If you can read this, the layout updated!</h1>
   
 <div class="contents"></div>
   
@@ -20,7 +22,9 @@ var ToC =
     "<h2>On this page:</h2>" +
     "<ol>";
 
-var newLine, el, title, link, currentH2Id = null, currentH3Id = null;
+var newLine, el, title, link;
+var currentH2Id = null, currentH3Id = null;
+var h2Counter = 0; // Counter for h2 elements
 
 // Loop through h2, h3, and h4 elements
 $("h2, h3, h4").each(function(index) {
@@ -43,12 +47,14 @@ $("h2, h3, h4").each(function(index) {
       currentH3Id = null;
     }
     if (currentH2Id !== null) {
-      ToC += "</li>"; // Close h2
+      ToC += "</li>"; // Close previous h2
     }
 
-    // Create a new list item for the h2
+    // Increment the h2 counter and create a new list item for the h2
+    h2Counter++;
     newLine =
       "<li>" +
+        h2Counter + ". " + // Add counter before title
         "<a href='" + link + "'>" +
           title +
         "</a>" +
