--- a/style.scss
+++ b/style.scss
@@ -203,10 +203,12 @@ nav {
   padding-right: 20px;
   margin-left: 15px;
   margin-bottom: 15px;
-  background-color: #D3D3D3;
+  background-color: green;
   border-color: #a2a9b1;
   border-width: thin;
 }
+
+//#D3D3D3
 
 nav:after {
     content:"\a";
