--- a/style.scss
+++ b/style.scss
@@ -203,12 +203,10 @@ nav {
   padding-right: 20px;
   margin-left: 15px;
   margin-bottom: 15px;
-  background-color: green;
+  background-color: #D3D3D3;
   border-color: #a2a9b1;
   border-width: thin;
 }
-
-//#D3D3D3
 
 nav:after {
     content:"\a";
