--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,6 @@ layout: default
 <article class="page">
   
   <h1>{{ page.title }}</h1>
-
-<h1>If you can read this, the layout updated3</h1>
   
 <div class="contents"></div>
   
@@ -15,6 +13,8 @@ layout: default
 
   </div>
 
+OLD SCRIPT:
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 var ToC =
@@ -22,9 +22,7 @@ var ToC =
     "<h2>On this page:</h2>" +
     "<ol>";
 
-var newLine, el, title, link;
-var currentH2Count = 0; // Counter for h2 elements
-var currentH3Id = null; // Variable for current h3 id
+var newLine, el, title, link, currentH2Id = null, currentH3Id = null;
 
 // Loop through h2, h3, and h4 elements
 $("h2, h3, h4").each(function(index) {
@@ -41,35 +39,39 @@ $("h2, h3, h4").each(function(index) {
 
   // Handle h2 elements
   if (el.is("h2")) {
-    currentH2Count++; // Increment counter for each h2
-    newLine =
-      "<li>" +
-        currentH2Count + ". " + // Number the h2
-        "<a href='" + link + "'>" +
-          title +
-        "</a>";
-
-    // Close any remaining open h3 lists
+    // Close previous lists if necessary
     if (currentH3Id !== null) {
-      ToC += "</li></ol>"; // Close previous h3
+      ToC += "</li></ol>"; // Close h3
       currentH3Id = null;
     }
+    if (currentH2Id !== null) {
+      ToC += "</li>"; // Close h2
+    }
 
-    ToC += newLine + "<ol>"; // Start a new nested list for h3s
+    // Create a new list item for the h2
+    newLine =
+      "<li>" +
+        "<a href='" + link + "'>" +
+          title +
+        "</a>" +
+        "<ol>"; // Start a new nested list for h3s
+    currentH2Id = el.attr("id");
   }
 
   // Handle h3 elements
   if (el.is("h3")) {
+    // Close previous h3 list if necessary
     if (currentH3Id !== null) {
-      ToC += "</li>"; // Close previous h3 but leave the ol open for new h4s
+      ToC += "</li>"; // Close h3 but leave the ol open for new h4s
     }
 
+    // Create a new list item for the h3
     newLine =
       "<li>" +
         "<a href='" + link + "'>" +
           title +
         "</a>";
-    currentH3Id = el.attr("id"); // Update current h3 ID
+    currentH3Id = el.attr("id");
   }
 
   // Handle h4 elements
@@ -89,6 +91,9 @@ $("h2, h3, h4").each(function(index) {
 // Close any remaining open lists
 if (currentH3Id !== null) {
   ToC += "</li></ol>"; // Close h3 list
+}
+if (currentH2Id !== null) {
+  ToC += "</li>"; // Close h2 list
 }
 
 ToC +=
