--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
   
   <h1>{{ page.title }}</h1>
 
-<h1>If you can see this, the layout updated!</h1>
+<h1>If you can see this, the layout updated2</h1>
   
 <div class="contents"></div>
   
@@ -22,10 +22,10 @@ var ToC =
     "<h2>On this page:</h2>" +
     "<ol>";
 
-var newLine, el, title, link, currentH3Id = null, currentH4Id = null;
+var newLine, el, title, link, currentH2Id = null, currentH3Id = null;
 
 // Loop through h2, h3, and h4 elements
-$("h2, h3, h4").each(function(index) {
+$("h2, h3").each(function(index) {
   el = $(this);
   title = el.text();
 
@@ -39,52 +39,41 @@ $("h2, h3, h4").each(function(index) {
 
   // Handle h2 elements
   if (el.is("h2")) {
-    // Close any open nested lists for h3 and h4 elements
+    // Close previous h3 nested list if it was open
     if (currentH3Id !== null) {
       ToC += "</li></ol>"; // Close h3
       currentH3Id = null;
     }
-    if (currentH4Id !== null) {
-      ToC += "</li></ol>"; // Close h4
-      currentH4Id = null;
+
+    // Close the previous h2 list item
+    if (currentH2Id !== null) {
+      ToC += "</li>"; // Close h2
     }
 
-    // Close the previous h2 item if necessary
-    ToC += currentH3Id === null ? "</li>" : ""; // Close h2
-
-    // Create a new list item for the h2 without nesting
+    // Create a new list item for h2
     newLine =
       "<li>" +
         "<a href='" + link + "'>" +
           title +
         "</a>" +
-      "</li>"; // No nested list for h2s
+        "<ol>"; // Start nested list for h3s
+    currentH2Id = el.attr("id");
   }
 
-  // Handle h3 elements (start a nested list)
+  // Handle h3 elements
   if (el.is("h3")) {
+    // Close the previous h3 if necessary
     if (currentH3Id !== null) {
-      ToC += "</li>"; // Close previous h3 but keep the ol open
+      ToC += "</li>"; // Close h3 but keep the ol open
     }
 
+    // Create a new list item for h3
     newLine =
       "<li>" +
         "<a href='" + link + "'>" +
           title +
-        "</a>" +
-        "<ol>"; // Start a nested list for h4s
+        "</a>";
     currentH3Id = el.attr("id");
-  }
-
-  // Handle h4 elements (nested under h3)
-  if (el.is("h4")) {
-    newLine =
-      "<li>" +
-        "<a href='" + link + "'>" +
-          title +
-        "</a>" +
-      "</li>";
-    currentH4Id = el.attr("id");
   }
 
   ToC += newLine;
@@ -94,6 +83,10 @@ $("h2, h3, h4").each(function(index) {
 if (currentH3Id !== null) {
   ToC += "</li></ol>"; // Close h3 list
 }
+if (currentH2Id !== null) {
+  ToC += "</li>"; // Close h2 list
+}
+
 ToC += "</ol></nav>";
 
 // Append the ToC to the div with the class "contents"
