--- a/style.scss
+++ b/style.scss
@@ -213,9 +213,10 @@ nav {
   padding-right: 20px;
   margin-left: 15px;
   margin-bottom: 15px;
-  background-color: green;
+  background-color: orange;
   border-color: #a2a9b1;
   border-width: thin;
+  width: 300px;
 }
 
 // #D3D3D3
