--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
     </div>
 
 <div class="sidenav">
+  <a href="{{ site.baseurl }}">Home</a>
   <a href="{{ site.baseurl }}/about">About</a>
-  <a href="{{ site.baseurl }}/test">Testing</a>
 </div>
     
     <div id="main" role="main" class="container">
