--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </div>
 
 <div class="sidenav">
-  <a href="{{ site.baseurl }}">Home</a>
+  <a href="https://maverickspectacle.github.io/">Home</a>
   <a href="{{ site.baseurl }}/about">About</a>
 </div>
     
